Published multiple files

--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Ортелий, Абрахам.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Ортелий, Абрахам.md
@@ -7,5 +7,5 @@
 Фламандский картограф эпохи Возрождения (XVI век).
 
 ## Упоминания в курсе
-- **"Театр мира"**: В [[Лекция 10 - Карты и картография (Берг и Латур)\|десятой лекции]] он упоминается как создатель первого в истории современного атласа под названием **"Theatrum Orbis Terrarum"** (1570), что переводится как "Зрелище круга земного" или "Театр мира".
+- **"Театр мира"**: В [[Кейс Геофилософия/1 Лекции/Лекция 10 - Карты и картография\|Лекция 10 - Карты и картография]] он упоминается как создатель первого в истории современного атласа под названием **"Theatrum Orbis Terrarum"** (1570), что переводится как "Зрелище круга земного" или "Театр мира".
 - **[[Карта как мировоззрение\|Карта как мировоззрение]]**: Его работа является ярким примером того, как [[атлас\|атлас]] и карта становятся способом упорядочить мир и представить его как единое, обозримое **зрелище**. Именно с его атласа, по мнению [[Кейс Геофилософия/4 Авторы/Берг, Томас\|Томаса Берга]], пошла знаменитая метафора "весь мир — театр".
