Published multiple files

--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Берг, Томас.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Берг, Томас.md
@@ -4,7 +4,7 @@
 
 # Берг, Томас
 
-Научный журналист, автор книги "[[Кейс Геофилософия/5 Источники/Книга - Театр мира (Берг)\|Книга - Театр мира (Берг)]]", которая стала основой для [[Лекция 10 - Карты и картография (Берг и Латур)\|десятой лекции]] об [[Кейс Геофилософия/2 Темы/История картографии\|истории картографии]].
+Научный журналист, автор книги "[[Кейс Геофилософия/5 Источники/Книга - Театр мира (Берг)\|Книга - Театр мира (Берг)]]", которая стала основой для [[Кейс Геофилософия/1 Лекции/Лекция 10 - Карты и картография\|десятой лекции]] об [[Кейс Геофилософия/2 Темы/История картографии\|истории картографии]].
 
 ## Основные идеи
 - **[[Карта как мировоззрение\|Карта как мировоззрение]]**: Берг утверждает, что карты — это не просто технические инструменты, а **способы структурирования мира**, отражающие мировоззрение своей эпохи.
