--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Вудард, Бен.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Вудард, Бен.md
@@ -8,6 +8,6 @@
 
 ## Вклад в геофилософию
 - **Определение [[Геофилософия 1\|геофилософии]]**: В [[Кейс Геофилософия/1 Лекции/Лекция 01 - Введение. Когда закончилась Земля\|первой лекции]] приводится его ключевое определение: геофилософия — это не философия *о* Земле, а серьезное отношение к тому, как **[[Кейс Геофилософия/3 Понятия/Земля\|Земля]] обуславливает мышление**.
-- **[[Кейс Геофилософия/2 Темы/Проблема оснований и безосновности\|Проблема оснований и безосновности]]**: В [[Лекция 03 - Земля без оснований (Шеллинг и Вудард)\|третьей лекции]] его работа используется для анализа проблемы [[Кейс Геофилософия/3 Понятия/Безосновность (Грунд)\|безосновности]]. Он связывает философскую бездну (*Ungrund*) с материальной реальностью геологических процессов.
+- **[[Кейс Геофилософия/2 Темы/Проблема оснований и безосновности\|Проблема оснований и безосновности]]**: В [[Кейс Геофилософия/1 Лекции/Лекция 03 - Земля без оснований\|Лекция 03 - Земля без оснований]] его работа используется для анализа проблемы [[Кейс Геофилософия/3 Понятия/Безосновность (Грунд)\|безосновности]]. Он связывает философскую бездну (*Ungrund*) с материальной реальностью геологических процессов.
 - **[[Кейс Геофилософия/3 Понятия/Геологическое как бессознательное\|Геологическое как бессознательное]]**: Он предлагает понимать [[геологическое\|геологическое]] как некое философское "бессознательное" — иррациональную, жуткую силу, которая лежит в основе нашего рационального мира.
 - **Критика [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёза]]**: Критикует [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёза]] за то, что его геофилософия слишком сосредоточена на "человеческой поверхности" и игнорирует темную, нечеловеческую природу [[геологическое\|геологического]].
