--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Агамбен, Джорджо.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Агамбен, Джорджо.md
@@ -4,7 +4,7 @@
 
 # Агамбен, Джорджо
 
-Итальянский философ, чьи идеи являются центральными для [[Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] и концепции [[Темная земля\|Темная земля]].
+Итальянский философ, чьи идеи являются центральными для [[Кейс Геофилософия/1 Лекции/Лекция 09 - Темная Земля\| девятой лекции]] и концепции [[Темная земля\|Темная земля]].
 
 ## Вклад в геофилософию
 - **[[Кейс Геофилософия/3 Понятия/Гея vs Хтонь\|Гея vs Хтонь]]**: Главный вклад Агамбена в геофилософию — это его критика [[Кейс Геофилософия/3 Понятия/Теория Геи\|Теория Геи]] и введение концепции [[Кейс Геофилософия/3 Понятия/Хтонь\|Хтонь]]. Он утверждает, что современная мысль забыла о хтонической, подземной и смертной стороне [[Кейс Геофилософия/3 Понятия/Земля\|Земли]], фокусируясь только на ее живой поверхности, [[Кейс Геофилософия/3 Понятия/Гея\|Гее]].
