Published multiple files

--- a/src/site/notes/Кейс Геофилософия/4 Авторы/0 Индекс — Авторы.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/0 Индекс — Авторы.md
@@ -34,7 +34,7 @@
 - [[Кейс Геофилософия/4 Авторы/Платон\|Платон]]
 - [[Кейс Геофилософия/4 Авторы/Подорога, Валерий\|Подорога, Валерий]]
 - [[Кейс Геофилософия/4 Авторы/Птолемей, Клавдий\|Птолемей, Клавдий]]
-- [[Такер, Юджин\|Такер, Юджин]]
+- [[Кейс Геофилософия/4 Авторы/Такер, Юджин\|Такер, Юджин]]
 - [[Кейс Геофилософия/4 Авторы/Хайдеггер, Мартин\|Хайдеггер, Мартин]]
 - [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй, Донна]]
 - [[Кейс Геофилософия/4 Авторы/Хаттон, Джеймс\|Хаттон, Джеймс]]
