--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Лавкрафт, Говард.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Лавкрафт, Говард.md
@@ -10,4 +10,4 @@
 
 - **[[Кейс Геофилософия/2 Темы/Спекулятивный поворот\|Спекулятивный поворот]]**: В [[Кейс Геофилософия/1 Лекции/Лекция 01 - Введение. Когда закончилась Земля\|первой лекции]] упоминается, что любовь к творчеству Лавкрафта была одной из объединяющих черт для философов спекулятивного реализма. Его попытки описать сущностей, которые выходят за пределы человеческого понимания (космический ужас), перекликаются с их задачей помыслить "Великое Внешнее".
 
-- **Критика со стороны [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Донны Харауэй]]**: В [[Лекция 04 - Политики заботы (Мортон и Харауэй)\|четвертой лекции]] отмечается, что Харауэй, вводя понятие [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]], сознательно дистанцируется от лавкрафтовского Ктулху. Она критикует его творчество, называя его монстров "христианскими" и чуждыми ее проекту, который основан на хтонических (земных), а не космических силах.
+- **Критика со стороны [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Донны Харауэй]]**: В [[Кейс Геофилософия/1 Лекции/Лекция 04 - Политики заботы\|четвертой лекции]] отмечается, что Харауэй, вводя понятие [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]], сознательно дистанцируется от лавкрафтовского Ктулху. Она критикует его творчество, называя его монстров "христианскими" и чуждыми ее проекту, который основан на хтонических (земных), а не космических силах.
