--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Птолемей, Клавдий.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Птолемей, Клавдий.md
@@ -7,6 +7,6 @@
 Позднеэллинистический астроном, астролог, математик, географ (II век н.э.). Жил и работал в Александрии.
 
 ## Упоминания в курсе
-- **"Руководство по географии"**: В [[Лекция 10 - Карты и картография (Берг и Латур)\|десятой лекции]] он упоминается как автор фундаментального труда, который обобщил все географические знания античности.
+- **"Руководство по географии"**: В [[Кейс Геофилософия/1 Лекции/Лекция 10 - Карты и картография\|десятой лекции]] он упоминается как автор фундаментального труда, который обобщил все географические знания античности.
 - **Картография**: Он создал подробную карту **[[Кейс Геофилософия/3 Понятия/Ойкумена\|ойкумены]]** (обитаемого мира), используя систему **меридианов и параллелей**, что стало огромным шагом вперед для научной картографии.
 - **Возрождение**: Его труд был утерян для Европы в Средние века, но его перевод на латынь в XV веке произвел революцию и дал толчок развитию картографии эпохи Возрождения.
