--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Хаттон, Джеймс.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Хаттон, Джеймс.md
@@ -9,5 +9,5 @@
 ## Вклад в геофилософию
 - **[[Кейс Геофилософия/3 Понятия/Глубинное время (Deep Time)\|Глубинное время (Deep Time)]]**: Хаттон был одним из первых ученых, кто осознал и научно обосновал огромный возраст [[Кейс Геофилософия/3 Понятия/Земля\|Земли]]. Он понял, что геологические процессы (такие как эрозия и седиментация) требуют миллионов лет, а не тысяч, как считалось ранее на основе библейской хронологии.
 - **Демифологизация возраста Земли**: Его работа стала **демифологизацией** [[Кейс Геофилософия/3 Понятия/Земля\|Земли]], подорвав представление о едином акте творения и открыв для науки [[Кейс Геофилософия/3 Понятия/Глубинное время (Deep Time)\|Глубинное время (Deep Time)]].
-- **Влияние на [[Кейс Геофилософия/4 Авторы/Шеллинг, Фридрих\|Шеллинга]]**: В [[Лекция 03 - Земля без оснований (Шеллинг и Вудард)\|третьей лекции]] отмечается, что открытия Хаттона повлияли на [[Кейс Геофилософия/4 Авторы/Шеллинг, Фридрих\|Шеллинга]] и его отказ от идеи "первоисточника" в природе, что стало важным шагом к осмыслению [[Кейс Геофилософия/2 Темы/Проблема оснований и безосновности\|проблемы безосновности]].
-- **Земля как механизм**: В [[Лекция 07 - Теория Геи (Лавлок и Латур)\|седьмой лекции]] упоминается его переписка с [[Уатт, Джеймс\|Джеймсом Уаттом]] и его представление о [[Кейс Геофилософия/3 Понятия/Земля\|Земле]] как о "живом механизме", что предвосхитило [[Кейс Геофилософия/3 Понятия/Теория Геи\|теорию Геи]].
+- **Влияние на [[Кейс Геофилософия/4 Авторы/Шеллинг, Фридрих\|Шеллинга]]**: В [[Кейс Геофилософия/1 Лекции/Лекция 03 - Земля без оснований\|третьей лекции]] отмечается, что открытия Хаттона повлияли на [[Кейс Геофилософия/4 Авторы/Шеллинг, Фридрих\|Шеллинга]] и его отказ от идеи "первоисточника" в природе, что стало важным шагом к осмыслению [[Кейс Геофилософия/2 Темы/Проблема оснований и безосновности\|проблемы безосновности]].
+- **Земля как механизм**: В [[Кейс Геофилософия/1 Лекции/Лекция 07 - Теория Геи\|седьмой лекции]] упоминается его переписка с [[Уатт, Джеймс\|Джеймсом Уаттом]] и его представление о [[Кейс Геофилософия/3 Понятия/Земля\|Земле]] как о "живом механизме", что предвосхитило [[Кейс Геофилософия/3 Понятия/Теория Геи\|теорию Геи]].
