Published multiple files

--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 10 - Карты и картография.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 10 - Карты и картография.md
@@ -4,7 +4,7 @@
 
 # Лекция 10: Карты и картография. Взгляд на Землю
 
-**Основные понятия:** [[Кейс Геофилософия/2 Темы/История картографии\|История картографии]], [[Кейс Геофилософия/2 Темы/Критика картографии\|Критика картографии]], [[Карта как мировоззрение\|Карта как мировоззрение]], [[Кейс Геофилософия/3 Понятия/Синоптическая vs Навигационная интерпретация\|Синоптическая vs Навигационная интерпретация]]
+**Основные понятия:** [[Кейс Геофилософия/2 Темы/История картографии\|История картографии]], [[Кейс Геофилософия/2 Темы/Критика картографии\|Критика картографии]], [[Кейс Геофилософия/3 Понятия/Карта как мировоззрение\|Карта как мировоззрение]], [[Кейс Геофилософия/3 Понятия/Синоптическая vs Навигационная интерпретация\|Синоптическая vs Навигационная интерпретация]]
 **Ключевые авторы:** [[Кейс Геофилософия/4 Авторы/Берг, Томас\|Берг, Томас]], [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]], [[Кейс Геофилософия/4 Авторы/Ортелий, Абрахам\|Ортелий, Абрахам]]
 **Источники:** [[Кейс Геофилософия/5 Источники/Книга - Театр мира (Берг)\|Книга - Театр мира (Берг)]]
 
@@ -12,7 +12,7 @@
 
 ### 1. [[Кейс Геофилософия/4 Авторы/Берг, Томас\|Берг, Томас]] и [[Кейс Геофилософия/2 Темы/История картографии\|История картографии]]
 - Книга [[Кейс Геофилософия/4 Авторы/Берг, Томас\|Томаса Берга]] "[[Кейс Геофилософия/5 Источники/Книга - Театр мира (Берг)\|Театр мира]]" прослеживает интеллектуальную историю картографии.
-- **[[Карта как мировоззрение\|Карта как мировоззрение]]**: [[Кейс Геофилософия/4 Авторы/Берг, Томас\|Берг]] утверждает, что карты — это не просто отражение мира, а способ его структурирования.
+- **[[Кейс Геофилософия/3 Понятия/Карта как мировоззрение\|Карта как мировоззрение]]**: [[Кейс Геофилософия/4 Авторы/Берг, Томас\|Берг]] утверждает, что карты — это не просто отражение мира, а способ его структурирования.
 - **Метафора "Весь мир — театр"**: Восходит к атласу [[Кейс Геофилософия/4 Авторы/Ортелий, Абрахам\|Абрахама Ортелия]] (1570).
 - **Этапы развития карт**:
     - **Первые карты**: Изображали небо, миры мертвых, имели центральную точку.
