--- a/src/site/notes/Кейс Геофилософия/3 Понятия/0 Индекс – Понятия.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/0 Индекс – Понятия.md
@@ -30,12 +30,14 @@
 - [[Кейс Геофилософия/3 Понятия/Земля произведений\|Земля произведений]]
 - [[Кейс Геофилософия/3 Понятия/Ископаемая власть\|Ископаемая власть]]
 - [[Кейс Геофилософия/3 Понятия/Искусственная земля\|Искусственная земля]]
+- [[Кейс Геофилософия/3 Понятия/Карта как мировоззрение\|Карта как мировоззрение]]
 - [[Кейс Геофилософия/3 Понятия/Компост\|Компост]]
 - [[Кейс Геофилософия/3 Понятия/Критика корреляционизма\|Критика корреляционизма]]
 - [[Кейс Геофилософия/3 Понятия/Критика репрезентации\|Критика репрезентации]]
 - [[Кейс Геофилософия/3 Понятия/Ландшафт\|Ландшафт]]
 - [[Кейс Геофилософия/3 Понятия/Маргаритковый мир\|Маргаритковый мир]]
 - [[Кейс Геофилософия/3 Понятия/Межобъектность\|Межобъектность]]
+- [[Кейс Геофилософия/3 Понятия/Мультинатурализм\|Мультинатурализм]]
 - [[Кейс Геофилософия/3 Понятия/Нелокальность\|Нелокальность]]
 - [[Кейс Геофилософия/3 Понятия/Номадизм\|Номадизм]]
 - [[Кейс Геофилософия/3 Понятия/Номос земли\|Номос земли]]
