--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Ойкумена.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Ойкумена.md
@@ -12,4 +12,4 @@
 - **Практическая картография**: В античности карты создавались в первую очередь для изображения **[[Кейс Геофилософия/3 Понятия/Ойкумена\|ойкумены]]**. [[Клавдий Птолемей\|Клавдий Птолемей]] в своей "Географии" предпринял попытку наиболее полно и точно нанести на карту весь известный на тот момент обитаемый мир.
 
 ## Значение
-- Концепция ойкумены показывает, как [[Карта как мировоззрение\|карта является мировоззрением]]: она отражает не всю [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] объективно, а лишь ту ее часть, которая осмыслена и освоена определенной культурой.
+- Концепция ойкумены показывает, как [[Кейс Геофилософия/3 Понятия/Карта как мировоззрение\|карта является мировоззрением]]: она отражает не всю [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] объективно, а лишь ту ее часть, которая осмыслена и освоена определенной культурой.
