--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Священная география.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Священная география.md
@@ -15,7 +15,7 @@
 
 ## Характеристики
 - **Непрактичность**: Цель таких карт (*mappae mundi*) была не практической (навигация), а **богословской и назидательной**. Они должны были визуализировать христианское мироустройство и историю спасения.
-- **Мировоззрение**: Они являются ярким примером того, как [[Карта как мировоззрение\|карта выражает мировоззрение]], в данном случае — средневековое, теоцентрическое.
+- **Мировоззрение**: Они являются ярким примером того, как [[Кейс Геофилософия/3 Понятия/Карта как мировоззрение\|карта выражает мировоззрение]], в данном случае — средневековое, теоцентрическое.
 
 ## Конец священной географии
 - Эпоха Возрождения знаменует **секуляризацию карт**. [[Мауро, Фра\|Фра Мауро]] в своей знаменитой карте (1459) сознательно **выносит Рай за пределы карты**, поскольку, прочитав отчеты путешественников (Марко Поло), он знал, что на востоке его нет. Это знаменует переход к научной, эмпирической картографии.
