--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Ортелий, Абрахам.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Ортелий, Абрахам.md
@@ -8,4 +8,4 @@
 
 ## Упоминания в курсе
 - **"Театр мира"**: В [[Кейс Геофилософия/1 Лекции/Лекция 10 - Карты и картография\|десятой лекции]] он упоминается как создатель первого в истории современного атласа под названием **"Theatrum Orbis Terrarum"** (1570), что переводится как "Зрелище круга земного" или "Театр мира".
-- **Карта как мировоззрение**: Его работа является ярким примером того, как [[Кейс Геофилософия/3 Понятия/Атлас (как жанр)\|атлас]] и карта становятся способом упорядочить мир и представить его как единое, обозримое **зрелище**. Именно с его атласа, по мнению [[Кейс Геофилософия/4 Авторы/Берг, Томас\|Томаса Берга]], пошла знаменитая метафора "весь мир — театр".
+- **[[Кейс Геофилософия/3 Понятия/Карта как мировоззрение\|Карта как мировоззрение]]**: Его работа является ярким примером того, как [[Кейс Геофилософия/3 Понятия/Атлас (как жанр)\|атлас]] и карта становятся способом упорядочить мир и представить его как единое, обозримое **зрелище**. Именно с его атласа, по мнению [[Кейс Геофилософия/4 Авторы/Берг, Томас\|Томаса Берга]], пошла знаменитая метафора "весь мир — театр".
