--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Атлас (как жанр).md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Атлас (как жанр).md
@@ -7,7 +7,7 @@
 **Атлас** — это не просто сборник карт, а особая форма знания и способ структурирования мира, который играет важную роль в [[Геофилософия 1\|геофилософии]].
 
 ## Характеристики
-- **[[Карта как мировоззрение\|Карта как мировоззрение]]**: Атлас представляет мир как целостную систему, доступную для обозрения. [[Кейс Геофилософия/4 Авторы/Ортелий, Абрахам\|Абрахам Ортелий]] в своем атласе 1570 года представил мир как "театр", зрелище, которое можно обозреть целиком.
+- **[[Кейс Геофилософия/3 Понятия/Карта как мировоззрение\|Карта как мировоззрение]]**: Атлас представляет мир как целостную систему, доступную для обозрения. [[Кейс Геофилософия/4 Авторы/Ортелий, Абрахам\|Абрахам Ортелий]] в своем атласе 1570 года представил мир как "театр", зрелище, которое можно обозреть целиком.
 - **Власть над пространством**: Создание атласа дает форму власти над пространством, так как позволяет "сложить" его, сделать обозримым и поместить в карман.
 - **Нелинейное знание**: В отличие от книги, которую читают последовательно, по атласу "блуждают", выявляя нелинейные и скрытые связи.
 
