--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Берг, Томас.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Берг, Томас.md
@@ -7,6 +7,6 @@
 Научный журналист, автор книги "[[Кейс Геофилософия/5 Источники/Книга - Театр мира (Берг)\|Книга - Театр мира (Берг)]]", которая стала основой для [[Кейс Геофилософия/1 Лекции/Лекция 10 - Карты и картография\|десятой лекции]] об [[Кейс Геофилософия/2 Темы/История картографии\|истории картографии]].
 
 ## Основные идеи
-- **[[Карта как мировоззрение\|Карта как мировоззрение]]**: Берг утверждает, что карты — это не просто технические инструменты, а **способы структурирования мира**, отражающие мировоззрение своей эпохи.
+- **[[Кейс Геофилософия/3 Понятия/Карта как мировоззрение\|Карта как мировоззрение]]**: Берг утверждает, что карты — это не просто технические инструменты, а **способы структурирования мира**, отражающие мировоззрение своей эпохи.
 - **"Весь мир — театр"**: Он прослеживает эту метафору до атласа [[Кейс Геофилософия/4 Авторы/Ортелий, Абрахам\|Абрахама Ортелия]], который представил мир как зрелище.
 - **История карт**: В его книге прослеживается эволюция карт от мифологических и сакральных до прагматических и научных, показывая, как менялось отношение человека к пространству и [[Кейс Геофилософия/3 Понятия/Земля\|Земле]].
