--- a/src/site/notes/Кейс Геофилософия/5 Источники/Книга - Театр мира (Берг).md
+++ b/src/site/notes/Кейс Геофилософия/5 Источники/Книга - Театр мира (Берг).md
@@ -10,6 +10,6 @@
 Книга, на которой основана [[Лекция 10 - Карты и картография (Берг и Латур)\|десятая лекция]] об [[Кейс Геофилософия/2 Темы/История картографии\|истории картографии]].
 
 ## Основные идеи
-- **[[Карта как мировоззрение\|Карта как мировоззрение]]**: Главный тезис книги заключается в том, что карты — это не просто отражение мира, а способ его структурирования, выражающий мировоззрение эпохи.
+- **[[Кейс Геофилософия/3 Понятия/Карта как мировоззрение\|Карта как мировоззрение]]**: Главный тезис книги заключается в том, что карты — это не просто отражение мира, а способ его структурирования, выражающий мировоззрение эпохи.
 - **"Весь мир — театр"**: Берг прослеживает эту знаменитую метафору до атласа [[Кейс Геофилософия/4 Авторы/Ортелий, Абрахам\|Абрахама Ортелия]] "Theatrum Orbis Terrarum" (1570), который впервые представил всю [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] как единое зрелище, доступное для обозрения.
 - **История взгляда**: Книга прослеживает эволюцию карт от сакральных и мифологических до прагматических и научных, показывая, как менялся сам способ видения и конструирования пространства.
