Published multiple files

--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 02 - Земля как концепт.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 02 - Земля как концепт.md
@@ -28,4 +28,4 @@
 
 ### 4. "Что такое философия?": Рождение геофилософии
 - **Философия — это творчество концептов**.
-- **[[Геофилософия 1\|Геофилософия 1]]**: Любая философия является геофилософией. Она рождается в конкретном месте (Древняя Греция) из зазора между [[Кейс Геофилософия/3 Понятия/Земля\|Землей]] и [[Кейс Геофилософия/3 Понятия/Территория\|Территорией]].
+- **[[Кейс Геофилософия/3 Понятия/Геофилософия\|Геофилософия]]**: Любая философия является геофилософией. Она рождается в конкретном месте (Древняя Греция) из зазора между [[Кейс Геофилософия/3 Понятия/Земля\|Землей]] и [[Кейс Геофилософия/3 Понятия/Территория\|Территорией]].
