Published multiple files

--- a/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
+++ b/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
@@ -41,7 +41,7 @@
 
 Чтобы понять основы, начните с этих заметок:
 
-- [[Геофилософия 1\|Геофилософия 1]] — базовое определение.
+- [[Кейс Геофилософия/3 Понятия/Геофилософия\|Геофилософия]] — базовое определение.
 - [[Кейс Геофилософия/3 Понятия/Земля vs Территория\|Земля vs Территория]] — центральная оппозиция у [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёза]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари]].
 - [[Кейс Геофилософия/2 Темы/Практическая геофилософия\|Кейс Геофилософия/2 Темы/Практическая геофилософия]] — как применять идеи геофилософии в жизни.
     
