Published multiple files

--- a/src/site/notes/Кейс Геофилософия/2 Темы/0 Индекс–Темы.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/0 Индекс–Темы.md
@@ -16,7 +16,7 @@
 - [[Кейс Геофилософия/2 Темы/Политическая земля\|Политическая земля]]
 - [[Кейс Геофилософия/2 Темы/Политики заботы\|Политики заботы]]
 - [[Кейс Геофилософия/2 Темы/Постгуманизм\|Постгуманизм]]
-- [[Кейс Геофилософия/2 Темы/Практическая геофилософия\|Кейс Геофилософия/2 Темы/Практическая геофилософия]]
+- [[Кейс Геофилософия/2 Темы/Практическая геофилософия\|Практическая геофилософия]]
 - [[Кейс Геофилософия/2 Темы/Проблема оснований и безосновности\|Проблема оснований и безосновности]]
 - [[Кейс Геофилософия/2 Темы/Смерть больших нарративов\|Смерть больших нарративов]]
 - [[Кейс Геофилософия/2 Темы/Спекулятивный поворот\|Спекулятивный поворот]]
