--- a/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
+++ b/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
@@ -43,7 +43,7 @@
 
 - [[Кейс Геофилософия/3 Понятия/Геофилософия\|Геофилософия]] — базовое определение.
 - [[Кейс Геофилософия/3 Понятия/Земля vs Территория\|Земля vs Территория]] — центральная оппозиция у [[Кейс Геофилософия/4 Авторы/Делёз, Жиль\|Делёза]] и [[Кейс Геофилософия/4 Авторы/Гваттари, Феликс\|Гваттари]].
-- [[Кейс Геофилософия/2 Темы/Практическая геофилософия\|Кейс Геофилософия/2 Темы/Практическая геофилософия]] — как применять идеи геофилософии в жизни.
+- [[Кейс Геофилософия/2 Темы/Практическая геофилософия\|Практическая геофилософия]] — как применять идеи геофилософии в жизни.
     
 ### **Ключевые проблемы и направления**
 
