Published multiple files

--- a/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
+++ b/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
@@ -28,7 +28,7 @@
 
 Если вы предпочитаете более традиционный подход, воспользуйтесь оглавлением ниже. Оно содержит ссылки на основные разделы (лекции, темы, понятия), которые помогут вам систематически изучить материал.
 
-Весь текст в этой базе пронизан внутренними ссылками, которые выглядят как `[[Название заметки]]`. Нажатие на такую ссылку мгновенно перенесет вас на соответствующую страницу, позволяя интуитивно следовать за ходом мысли от одной идеи к другой.
+Весь текст в этой базе пронизан внутренними ссылками. Нажатие на такую ссылку мгновенно перенесет вас на соответствующую страницу, позволяя интуитивно следовать за ходом мысли от одной идеи к другой.
 
 
 ---
