Update content src/site/notes/Кейс Геофилософия/2 Темы/Темные теории.md

--- a/src/site/notes/Кейс Геофилософия/2 Темы/Темные теории.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Темные теории.md
@@ -2,9 +2,9 @@
 {"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Темные теории","permalink":"/kejs-geofilosofiya/2-temy/temnye-teorii/"}
 ---
 
-# Темные теории (Темная геофисофия)
+# Темные теории (Темная геофилософия)
 
-**Темные теории** ("темный поворот") — это общее название для философских течений, которые фокусируются на жутких, пессимистичных и не-человеческих аспектах реальности. В контексте геофилософии это направление можно назвать **[[Темная геофисофия\|Темная геофисофия]]**.
+**Темные теории** ("темный поворот") — это общее название для философских течений, которые фокусируются на жутких, пессимистичных и не-человеческих аспектах реальности. В контексте геофилософии это направление можно назвать **[[Темная геофилософия\|Темная геофилософия]]**.
 
 ## Основные черты
 - **Фокус на негативном**: Вместо витализма и жизни "светлой геофилософии", темные теории обращаются к темам смерти, вымирания, распада и ужаса.
