Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -16,12 +16,12 @@
 
 **==Коротко про ИССЛЕДОВАНИЯ==**
 
-Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса
+Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research. Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса
 
 Последние пару лет погрузился в тему **применения AI в исследованиях** и смежных областях:
 
 - Развивал навыки использования AI в исследованиях в [AI LAB](https://ai-lab.tech/) у Дмитрия Соловьева
-- Учился созданию и использованию AI-инструментов для управления знаниями в [AI Mindset Lab](https://aimindset.org/) у Глеба Калинина
+- Учился созданию и использованию AI-инструментов для управления знаниями в [AI Mindset Lab](https://aimindset.org/) у Глеба Калинина. Один из результатов обучения продемонстрирован на этом сайте в разделе [[Индекс –база знаний по Геофилософии \| «Кейс геофилосфия»]]
 - Участвовал в создании, тестировании и продвижении [инструментов на базе AI](https://blog.fastuna.ru/insightchat) в компании Tiburon Research
 
 →→ Больше про мой опыт в исследованиях в [[Исследования/Резюме\|Резюме]]
@@ -30,15 +30,19 @@
 
 Провожу психологические путешествия в Грузии, России, Израиле, в планах Турция Вместе с моим коллегой психологом Арсением Белорусцем на практике изучаю психологический эффект путешествий и развиваю метод ландшафтной аналитики
 
-Ландшафтная аналитика – «модерируемое» психологическое путешествие, групповая психотерапия в формате хайкинга, включающего в себя взаимодействие с объектами природного и культурного ландшафта
+**Метод ландшафтной аналитики** соединяет эффект путешествий и психотерапии. 
+Это не анализ ландшафта, а взаимодействие с ландшафтом на 2-х уровнях:
+→ **Физический**. Движение и физические нагрузки (поход, хайкинг, трекинг)
+→ **Психологический**. Природа отражает содержание психики и дает важные подсказки 
 
-Как работает ландшафтная аналитика:
 
-- Ведущие разрабатывают маршрут и подбирают точки на нём – объекты природного и культурного ландшафта,
-- Взаимодействие с ландшафтом рождает инсайты – природа отражает содержание психики и дает важные подсказки,
-- Движение и физическая нагрузка не менее важны, чем взаимодействие с ландшафтными объектами,
-- Ведущие выступают в роли проводников группы в физическом пространстве и пространстве психики,
-- Участники делятся друг с другом полученным опытом
+**Как работает метод:**
+
+- **Маршрут.** Ведущие разрабатывают маршрут и подбирают точки на нём – архетипические объекты природного и культурного ландшафта.
+- **Ходьба запускает процессы**. Движение и физические нагрузки проясняет мысли и стабилизирует внутреннее состояние.
+- **Взаимодействие с ландшафтом рождает инсайты.**  Природа отражает содержание психики и дает важные подсказки.
+- **Ведущие** выступают в роли проводников группы в физическом пространстве и пространстве психики. Помогают состояться диалогу человека с природой.
+- **Участники делятся друг с другом полученным опытом**.
 
 →→ Больше про психологические путешествия в нашем [телеграм-канале](https://t.me/outsideinsight)
 
