Published multiple files

--- a/src/site/notes/Исследования/Резюме.md
+++ b/src/site/notes/Исследования/Резюме.md
@@ -30,11 +30,11 @@
 
 Этапы работы в компании:
 
-- Пришел в компанию в 2018 году на этапе запуска онлайн платформы Fastuna Сейчас это лидирующий продукт для быстрых исследований – тестирования креатива, продуктовых гипотез и UX 
+- Пришел в компанию в 2018 году на этапе запуска онлайн платформы Fastuna Сейчас это лидирующий продукт для быстрых исследований – тестирования креатива, продуктовых гипотез и UX.
 
-- С 2020 года занимался продвижением всей линейки исследовательских продуктов Tiburon Research, включая решения на базе AI (начиная с этапа разработки идеи) Вошел в совет директоров компании Дополнительно стал отвечать за тендеры для всех исследовательских отделов компании
+- С 2020 года занимался продвижением всей линейки исследовательских продуктов Tiburon Research, включая решения на базе AI (начиная с этапа разработки идеи). Вошел в совет директоров компании Дополнительно стал отвечать за тендеры для всех исследовательских отделов компании.
 
-- В 2024 году ушел с должности директора по развитию бизнеса В течение года занимался изучением пользовательского опыта (СX) клиентов Tiburon Research (в контексте повышения эффективности рабочих процессов) и разработкой новых рынков для AI-инструментов компании
+- В 2024 году ушел с должности директора по развитию бизнеса В течение года занимался изучением пользовательского опыта (СX) клиентов Tiburon Research (в контексте повышения эффективности рабочих процессов) и разработкой новых рынков для AI-инструментов компании.
 
 Достижения:
 
