Update content src/site/notes/Кейс База знаний Геофилософия/Индекс –база знаний по Геофилософии.md

--- a/src/site/notes/Кейс База знаний Геофилософия/Индекс –база знаний по Геофилософии.md
+++ b/src/site/notes/Кейс База знаний Геофилософия/Индекс –база знаний по Геофилософии.md
@@ -5,7 +5,8 @@
 
 # **Индекс: База знаний по Геофилософии**
 
-Добро пожаловать! Эта база знаний создана на основе транскриптов [одноименного курса лекций](https://www.youtube.com/watch?v=sZ5y-9kIbDw&list=PLUzCBwHhuhXG8TIfQFfTxn4pGj1stdJAJ) Максимилиана Неаполитанского и представляет собой введение в мир геофилософской мысли.
+Добро пожаловать! 
+Эта база знаний создана на основе транскриптов [одноименного курса лекций](https://www.youtube.com/watch?v=sZ5y-9kIbDw&list=PLUzCBwHhuhXG8TIfQFfTxn4pGj1stdJAJ) Максимилиана Неаполитанского и представляет собой введение в мир геофилософской мысли.
 База знаний собрана на Obsidian, структура и наполнение выполнено с помощью AI-инструментов, публикация в сети  – при помощи плагина Digital Garden. 
 
 [Презентация в PDF по созданию базы данных](https://drive.google.com/file/d/1DJCDKUEQxyw_WGloYy1OSw9OesMBBPe_/view?usp=sharing)
