Published multiple files

--- a/src/site/notes/Исследования/Резюме.md
+++ b/src/site/notes/Исследования/Резюме.md
@@ -48,9 +48,7 @@
 
 Среди клиентов, с которыми работал лично на регулярной основе более сотни компаний из различных отраслей, включая Авито, Альфа-Банк, ВТБ, МВидео, Мегафон, Мултон, Пятерочка, Промсвязьбанк, Русагро, Самокат,  Сбербанк (включая дочерние предприятия), Т-Банк, Черноголовка, Lamoda, Ozon, Splat, Tele2, VK.
 
-Подробности про мой опыт в отдельных направлениях:
-- [[Исследования/Qual\|Качественные исследования]]
-- Исследования для НКО  
+Больше про мой опыт в  [[Исследования/Qual\|качественных исследованиях]]
 
 
- 🏠 [[Обо мне\|Вернуться на главную страницу]] 
+ 🏠 [[Не для публикации/Обо мне\|Вернуться на главную страницу]] 
