--- a/src/site/notes/Предложение 2026-01-05.md
+++ b/src/site/notes/Предложение 2026-01-05.md
@@ -9,8 +9,8 @@
 Я превращаю неопределенность в деньги. В этом мне помогает моя многолетняя экспертиза в исследованиях потребителей  и AI-инструменты.  
 Я собрал команду профессионалов в исследованиях и AI-production (производстве рекламы):
 
-- Мы полностью **пересобрали свои процессы на базе AI**, но оставили в них человека – нашу экспертизу («human in the loop»)
-- Мы **убрали лаг между «узнали инсайт» и «запустили рекламу».**
+ 🟢 Мы полностью **пересобрали свои процессы на базе AI**, но оставили в них человека – нашу экспертизу («human in the loop»)
+🟢  Мы **убрали лаг между «узнали инсайт» и «запустили рекламу».**
 
 В результате наши клиенты получают **креатив, который продает** – со скоростью стартапа  по доступной цене.
 
