Published multiple files

--- a/src/site/notes/Профиль эксперта 2026-01-08.md
+++ b/src/site/notes/Профиль эксперта 2026-01-08.md
@@ -1,17 +1,17 @@
 ---
-{"dg-publish":true,"permalink":"/profil-eksperta-2026-01-08/","title":"Экспертиза","pinned":true,"dgShowLocalGraph":true}
+{"dg-publish":true,"permalink":"/profil-eksperta-2026-01-08/","title":"Экп","pinned":true,"dgShowLocalGraph":true}
 ---
 
 # Андрей Сычёв: профиль эксперта
 
 
-> [!EXAMPLE] **МОЙ ПОДХОД**
+> [!QUOTE] **МОЙ ПОДХОД**
 > **Экспертиза +AI («expert in the loop»)**
 > AI ускоряет работу, но не заменяет голову.
-Мой опыт в «классических» исследованиях позволяет отличать реальные инсайты от информационного шума. А работа в Fastuna и **продуктовый подход** научили меня скорости и нацеленности на решение конкретных бизнес-задач.
+Мой опыт в «классических» исследованиях позволяет **отличать реальные инсайты от информационного шума.** А работа в Fastuna и продуктовый подход научили меня **скорости и нацеленности на решение конкретных бизнес-задач**.
 
 ---
-#### Мой актив
+#### Мой **актив**
 
 **1. Экспертиза в исследованиях (Фундамент)**
 * **Методология :** глубоко разбираюсь в методологии исследований (Quant / Qual).     Знаю «правила нарушений»: понимаю, где можно «срезать углы», а где нужна методологическая строгость. 
@@ -31,9 +31,8 @@
 
 > [!ABSTRACT] 🔥 В РАБОТЕ ПРЯМО СЕЙЧАС
 > **Исследование: «AI-трансформация индустрии маркетинговых исследований»**
->
-Этап 1. **Экспертные интервью** с Opinion Leaders и топ-менеджерами (агентства и клиенты).
-Этап 2.  **AI-интервью с менеджерами по исследованиям**
+> **Этап 1. Экспертные интервью** с Opinion Leaders и топ-менеджерами (агентства и клиенты).
+> **Этап 2.  AI-интервью с менеджерами** по исследованиям**
 >
 > 🗓 *Статус: Полевой этап. Релиз: Март 2026.*
 
