Published multiple files

--- a/src/site/notes/Профиль 2026-01-09.md
+++ b/src/site/notes/Профиль 2026-01-09.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/profil-2026-01-09/","title":"Экспертиза","dgShowLocalGraph":true}
+{"dg-publish":true,"permalink":"/profil-2026-01-09/","title":"Экспертиза","pinned":true,"dgShowLocalGraph":true}
 ---
 
 # Андрей Сычёв: профиль эксперта
