--- a/src/site/notes/Предложение 2026-01-05.md
+++ b/src/site/notes/Предложение 2026-01-05.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/predlozhenie-2026-01-05/","title":"Home","pinned":true,"tags":["gardenEntry"],"dgShowLocalGraph":true}
+{"dg-publish":true,"permalink":"/predlozhenie-2026-01-05/","title":"Home","pinned":true,"tags":["gardenEntry"]}
 ---
 
 
