Published multiple files

--- a/src/site/notes/Профиль 2026-01-09.md
+++ b/src/site/notes/Профиль 2026-01-09.md
@@ -1,12 +1,12 @@
 ---
-{"dg-publish":true,"permalink":"/profil-2026-01-09/","title":"Экспертиза"}
+{"dg-publish":true,"permalink":"/profil-2026-01-09/","title":"Экспертиза","pinned":true,"dgShowLocalGraph":true}
 ---
 
 # Андрей Сычёв: профиль эксперта
 
 
 > [!QUOTE] **МОЙ ПОДХОД**
-> **Экспертиза +AI («expert in the loop»)**
+> **Экспертиза +AI («Expert in the Loop»)**
 > AI ускоряет работу, но не заменяет голову.
 Мой опыт в «классических» исследованиях позволяет **отличать реальные инсайты от информационного шума.** А работа в Fastuna и продуктовый подход научили меня **скорости и нацеленности на решение конкретных бизнес-задач**.
 
@@ -17,7 +17,7 @@
 Глубокое знание методологии исследований и опыт в индустриях FinTech, FMCG, Pharma, Digital Retail,  Automotive  
 Знаю «правила нарушений»: понимаю, где можно «срезать углы», а где нужна методологическая строгость. 
 
-**Знаю законы создания креатива, который продает**
+**Понимаю законы создания креатива, который продает**
 Пропустил через себя сотни рекламных тестов. Десятки из них детально разобрал «по косточкам» в статьях и выступлениях. 
 Понимаю где провокация приносит деньги, а где убивает репутацию бренда.
 
@@ -39,11 +39,11 @@
 
 
 ---
-##  Эволюция опыта  
+##  Опыт
 
 ### Tiburon Research & Fastuna (2018-2025)
 **Роль:** Директор по развитию бизнеса / Член совета директоров
-*Переход от классики к скорости – и исследованиям как инструменту для принятия решений.
+*Переход от «классики» к скорости – и исследованиям как инструменту для принятия решений.
 
 * **Запуск Fastuna:** Стоял у истоков / продвигал платформу для *быстрых* тестов креативных и продуктовых идей. Мы научили рынок, что данные можно получать за часы, а не недели. 
 * **Клиентский опыт (CX):** Лично провел сотни часов в диалоге с клиентами (СustDev) - 
@@ -54,7 +54,7 @@
 
 ### Международные агентства Nielsen & GfK
 **Роль:** От ассистента до Директора по работе с клиентами
-*Получил опыт проведения исследований любой сложности и  анализа больших данных. Наработал экспертизу по выводу новых продуктов на рынки Pharma, FMCG, Automotive, Retail.* 
+*Получил опыт проведения исследований любой сложности 
 
 * **GfK:** Развивал направления HealthCare, New Product Development. Провел десятки исследований по сегментации потребителей на основе психографии. Знаю, как выводятся новые продукты на сложные рынки.
 * **Nielsen:** Запустил с нуля автомобильное направление, работая напрямую с японскими штаб-квартирами. 
