Published multiple files

--- a/src/site/notes/Профиль 2026-01-09.md
+++ b/src/site/notes/Профиль 2026-01-09.md
@@ -43,7 +43,7 @@
 
 ### Tiburon Research & Fastuna (2018-2025)
 **Роль:** Директор по развитию бизнеса / Член совета директоров
-*Переход от «классики» к скорости – и исследованиям как инструменту для принятия решений.
+*Переход от «классики» к скорости – и исследованиям как инструменту для принятия решений.*
 
 * **Запуск Fastuna:** Стоял у истоков / продвигал платформу для *быстрых* тестов креативных и продуктовых идей. Мы научили рынок, что данные можно получать за часы, а не недели. 
 * **Клиентский опыт (CX):** Лично провел сотни часов в диалоге с клиентами (СustDev) - 
@@ -54,7 +54,7 @@
 
 ### Международные агентства Nielsen & GfK
 **Роль:** От ассистента до Директора по работе с клиентами
-*Получил опыт проведения исследований любой сложности 
+*Получил опыт проведения исследований любой сложности.
 
 * **GfK:** Развивал направления HealthCare, New Product Development. Провел десятки исследований по сегментации потребителей на основе психографии. Знаю, как выводятся новые продукты на сложные рынки.
 * **Nielsen:** Запустил с нуля автомобильное направление, работая напрямую с японскими штаб-квартирами. 
@@ -63,7 +63,7 @@
 
 - **AI RESEARCH LAB** 2025 – интенсив развития AI-навыков в исследованиях
 - **AI MINDSET LAB** 2024 — AI для создания баз знаний
-- **Мастерская Евгения Бабушкина**, 2025 курсы по писательскому мастерству –  для развития в себе «нарративного стратега» 
+- **Мастерская Евгения Бабушкина**, 2025 – курсы писательского мастерства –  для развития в себе «нарративного стратега» 
 
 ### Мои статьи 
 
