--- a/src/site/notes/Предложение 2026-01-05.md
+++ b/src/site/notes/Предложение 2026-01-05.md
@@ -2,16 +2,15 @@
 {"dg-publish":true,"permalink":"/predlozhenie-2026-01-05/","title":"Home","pinned":true,"tags":["gardenEntry"]}
 ---
 
-
 ## **Стратегия и AI-Продакшн: От неопределенности к деньгам.**
 	
 Привет! Меня зовут Андрей Сычёв. 
-Я помогаю бизнесу принимать решения и снижать риски. В этом мне помогает моя многолетняя экспертиза в исследованиях потребителей  и AI-инструменты.  
+Я помогаю бизнесу принимать решения. В этом мне помогает моя многолетняя экспертиза в исследованиях потребителей  и AI-инструменты.  
 
 Я собрал **команду профессионалов в исследованиях и AI-production** (производстве рекламы):
 
- 🟢 Мы **пересобрали свои процессы на базе AI**, но оставили в них человека – нашу экспертизу («human in the loop»)
-🟢  Мы **убрали лаг между «узнали инсайт» и «запустили рекламу».**
+ 🟢 Мы **пересобрали свои процессы на базе AI**, но оставили в них человека – нашу экспертизу («Human in the Loop»)
+🟢  Мы убрали лаг между «узнали инсайт» и «запустили рекламу» (Zero Signal Loss»).
 
 В результате наши клиенты получают **креатив, который продает** – со скоростью стартапа  по доступной цене.
 
@@ -19,7 +18,7 @@
 > [!Warning] Проблема рынка
 > **95% рекламы — это «креативный шум»**. Красивая картинка, за которой нет правды о потребителе. Такие кампании сливают бюджет.
 > 
-> Почему так происходит? 
+> **Почему так происходит?** 
 > Рынок научился делать «красиво», но разучился делать «смыслово»
 > Креативные идеи создаются на основе «коллективной галлюцинации»  – без связи с потребителями продукта 
 > Стратегия умирает по дороге к дизайнеру. Инсайт теряется.
@@ -39,34 +38,12 @@ Zero Signal Loss:
 
 **Формат работы:** вы можете заказать весь цикл «под ключ» или отдельные этапы.
 
----
 ### Выберите свой сценарий:
 
 > [!QUESTION] Кто вы?
 > **Вариант А:** [[#Для Рекламных Агентств и Стратегов|Я из Агентства / Продакшена]] (Нужно выиграть тендер или усилить стратегию)
 > **Вариант В:** [[#Для Корпораций и Брендов|Я из Корпорации / Бренда]] (Нужен контролируемый результат, скорость или «страховка» от ошибок)
 > **Вариант C:** [[#Для Фаундеров и Стартапов|Я Фаундер / Стартап]] (Нужно найти Product-Market Fit и запустить продажи)
-
-
----
-
-## Для Рекламных агентств и Стратегов
-
-White Label Research & Production. 
-
-У вас горят сроки. Клиент требует  обоснований, а вы боитесь, что стратегия окажется «водой».
-**Ваша цель:** усилить стратегию, выиграть тендер
-**Наша работа:** мы находим инсайты и создаем  драфты креативов за 72 часа, вы продаете клиенту результат как свою стратегию.
-
-**Чем мы делаем:**
-
-1.  **Стратегическое обоснование:** За 2-5 дней проводим исследование. Даем инсайты и цифры, которые обосновывают ваш креатив. Это ваша страховка от «вкусовщины» клиента.
-2.  **AI-Animatics & Mood Video:** превращаем инсайты в готовые видео-ролики за 48 часов.
-3.  **Валидация идей:** Тестируем идеи до производства
-
-**Итог:** Вы приходите на тендер с готовым роликом и аргументацией. Win-rate растет кратно.
-
----
 
 ## Для Корпораций и Брендов
 
@@ -83,6 +60,20 @@ White Label Research & Production.
 | **1. Стратегический фундамент (Strategy & Insight)**<br>Синтез AI-Desk Research (анализ рынка/трендов) и глубинных интервью с потребителями.             | **Точность.** Вы получаете стратегию, основанную на живых данных о людях, а не на кабинетных теориях.                        |
 | **2. Прототипирование и Тестирование**<br>Мы не выбираем идеи в переговорной. Мы создаем черновые видео (Animatics) и тестируем их на целевой аудитории. | **Валидация.** Вы утверждаете в продакшн сценарий, который показал лучшие метрики на тестах.                                 |
 | **3. AI-Production & Scale**<br>Создаем контент кинематографического качества со скоростью х3 от обычного агентства.                                     | **Скорость и масштаб.** Вы получаете качественный контент в объемах и на скоростях, недоступных при классическом продакшене, |
+
+## Для Рекламных агентств и Стратегов
+
+*White Label Research*  
+
+У вас горят сроки. Клиент требует  обоснований, а вы боитесь, что стратегия окажется «водой».
+**Ваша цель:** усилить стратегию, выиграть тендер
+**Наша работа:** мы находим инсайты , вы продаете клиенту результат как свою стратегию.
+
+**Чем мы делаем:**
+1.  **Стратегическое обоснование:** За 2-5 дней проводим исследование. Даем инсайты и цифры, которые обосновывают ваш креатив. Это ваша страховка от «вкусовщины» клиента.
+2.  **Валидация идей:** Тестируем идеи до производства
+
+**Итог:** Вы приходите на тендер с готовой стратегией и аргументацией. 
 
 ---
 
